--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(7, 7, 7);
 }
 .swipermain {
   height: 100vh;
@@ -76,11 +77,25 @@ body {
 
 .reactNavbar{
   height: 60px;
+  cursor: pointer;
+}
+.reactNavbar-main{
+  position: absolute;
+  top:365px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  /* height: 60px; */
 }
 
 @media (min-width:1025px) and (max-width:1440px) {
   .home-title-box{
-    top:215px !important;
+    top:125px !important;
   }
 }
 @media (min-width:1441px) and (max-width:2560px){
