new ui color update

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(7, 7, 7);
+  background-color: rgb(31 31 31);
 }
 .swipermain {
   height: 100vh;
@@ -55,7 +55,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.726);
+  background-color: rgb(30 30 30 / 73%);
   z-index: 3;
 }
 .swiperimage {
