--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (prefers-#d52e2euced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
